--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 djangorestframework==3.15.1
 django-cors-headers==4.3.1
 pymysql==1.1.0
-mysqlclient==2.0.3
+# mysqlclient==2.0.3
+python-dotenv==1.0.1
